--- a/source/payment-and-delivery.html
+++ b/source/payment-and-delivery.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb" class="d-none d-lg-block">
+          <nav aria-label="breadcrumb" class="d-none d-xl-block">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="/">Главная</a></li>
               <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
