--- a/source/index.html
+++ b/source/index.html
@@ -19,6 +19,7 @@
     <div class="list-group">
       <a href="main.html" class="list-group-item list-group-item-action">Главная</a>
       <a href="payment-and-delivery.html" class="list-group-item list-group-item-action">Оплата и доставка</a>
+      <a href="about-us.html" class="list-group-item list-group-item-action">О компании</a>
     </div>
   </div>
 
