--- a/about-us.html
+++ b/about-us.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Оплата и доставка – производство зеркал и стеклянных изделий Liberta</title>
-  <meta name="description" content="Оплата и доставка украинского производителя, фабрика стекла Liberta.">
+  <title>О компании - производство зеркал и стеклянных изделий Liberta</title>
+  <meta name="description" content="О компании  украинского производителя, фабрика стекла Liberta.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -151,82 +151,129 @@
 
   </header>
 
-  <main class="delivery pt-30p pt-lg-0">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb" class="d-none d-xl-block">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Главная</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
-            </ol>
-          </nav>
-          <h1>Оплата и доставка</h1>
-          <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-          <section class="mt-40p">
-            <h2>Способы доставки</h2>
-            <div class="row align-items-center mb-20p">
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Aдресная доставка до вашего подъезда</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-2.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
-                  </div>
-                </div>
-              </div>
+  <main class="main-about">
+    <section class="about-intro">
+      <div class="container">
+        <nav aria-label="breadcrumb" class="d-none d-xl-block">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Главная</a></li>
+            <li class="breadcrumb-item active" aria-current="page">О компании - производство зеркал и стеклянных изделий Liberta</li>
+          </ol>
+        </nav>
+        <div class="row">
+          <div class="col-12 col-md-9 col-xl-6">
+            <h1>Компания Liberta</h1>
+            <div class="d-none d-sm-block">
+              <p>Создаем тренды в мире интерьерных зеркал, дверей и душевых кабин.</p>
             </div>
-            <p class="bg-pink p-20p">
-              <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
-            </p>
-            <div class="d-xl-none">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="h5 mt-30p">Бесплатная доставка</div>
-                  <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-                </div>
-                <div class="col-md-6">
-                  <img class="img-fluid" src="//liberta.ua/img/delivery-free-delivery.png.pagespeed.ce.7pIj7G4CMu.png" alt="">
-                </div>
-              </div>
-              <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
-            </div>
-          </section>
-          <section class="mt-40p">
-            <h2>Способы оплаты</h2>
-            <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
-            <div class="h6">Безналичными</div>
-            <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
-            <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
-          </section>
-          <section class="mt-40p">
-            <h3 class="h2">Транспортная упаковка зеркал</h3>
-            <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <div class="font-weight-bold d-flex align-items-center">
-              <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
-            </div>
-          </section>
-        </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p d-none d-xl-block">
-          <div class="h5">Бесплатная доставка</div>
-          <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-          <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
-          <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+          </div>
         </div>
       </div>
+    </section>
+
+    <div class="salons">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-7 col-xl-6 mr-auto">
+            <img class="salons__count img-fluid" src="//liberta.ua/img/xabout-company-number.png.pagespeed.ic.ekQfBPnkee.png" alt="">
+          </div>
+          <div class="col-12 col-md-5 mt-5 mt-md-0">
+            <div class="h1 salons__heading">Салонов профильной направленности</div>
+            <p>Продукция компании Liberta представленна во всех областях Украины, а также экспортируется в страны ЕС.</p>
+          </div>
+        </div>
+        <ul class="salons__partners list-unstyled row align-items-center mb-n30p mb-xl-0">
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-partner-1.png.pagespeed.ce.fRqvQHBqLp.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/xabout-partner-2.png.pagespeed.ic.Vhj9nC5vqN.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-partner-3.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-partner-4.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-partner-5.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-partner-6.png" alt="">
+          </li>
+        </ul>
+      </div>
     </div>
+
+    <div class="factory section-parallax">
+      <div class="container">
+        <div class="row">
+          <div class="col-9 col-md-7 col-xl-5 ml-auto">
+            <span class="factory__heading">Ежедневно производим</span>
+            <span class="factory__count">150</span>
+            <span class="factory__slash">/</span>
+            <span class="factory__per-day">единиц <br>изделий <br>в день</span>
+          </div>
+        </div>
+      </div>
+      <div class="section-parallax__bg"></div>
+    </div>
+
+    <section class="about-products">
+      <div class="container">
+        <h2 class="sr-only">Товары</h2>
+        <div class="row row-16 justify-content-center mb-n3 mb-md-0">
+          <div class="col-sm-6 col-md-4 mb-3 mb-md-0">
+            <a href="#" class="about-products__item h1" style="background-image: url('//liberta.ua/img/prod-count-bg-1.jpg');">
+              <span class="about-products__item-count">623</span>
+              <span class="about-products__item-descr">Моделей зеркал</span>
+            </a>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-3 mb-md-0">
+            <a href="#" class="about-products__item h1" style="background-image: url('//liberta.ua/img/prod-count-bg-2.jpg');">
+              <span class="about-products__item-count">140</span>
+              <span class="about-products__item-descr">Душевых кабин</span>
+            </a>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-3 mb-md-0">
+            <a href="#" class="about-products__item h1" style="background-image: url('//liberta.ua/img/prod-count-bg-3.jpg');">
+              <span class="about-products__item-count">4</span>
+              <span class="about-products__item-descr">Модели дверей</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="objects section-parallax">
+      <div class="container">
+        <h2 class="h1 mb-20p">Наши объекты</h2>
+        <p>Доверие наших постоянных клиентов — лучшее подтверждение<br> нашего опыта и профессионализма!</p>
+        <ul class="row align-items-center list-unstyled mb-n30p mb-xl-0 mt-5">
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-1.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-2.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-3.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-4.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-5.png" alt="">
+          </li>
+          <li class="col-6 col-md-4 col-xl-2 mb-30p mb-xl-0">
+            <img class="img-fluid" src="//liberta.ua/img/about-clients-6.png" alt="">
+          </li>
+        </ul>
+      </div>
+      <div class="section-parallax__bg"></div>
+    </section>
+
+    <img class="w-100" src="//liberta.ua/img/about-noborder-bg.png" alt="">
   </main>
 
   <div class="subscribe text-center">
