--- a/source/index.html
+++ b/source/index.html
@@ -20,6 +20,7 @@
       <a href="main.html" class="list-group-item list-group-item-action">Главная</a>
       <a href="payment-and-delivery.html" class="list-group-item list-group-item-action">Оплата и доставка</a>
       <a href="about-us.html" class="list-group-item list-group-item-action">О компании</a>
+      <a href="garranty-and-return.html" class="list-group-item list-group-item-action">Гарантия и возврат</a>
     </div>
   </div>
 
