--- a/source/payment-and-delivery.html
+++ b/source/payment-and-delivery.html
@@ -21,7 +21,7 @@
     <include src="source/include/header.html"></include>
   </header>
 
-  <main class="delivery pt-30p pt-lg-0">
+  <main class="delivery pt-20p pt-xl-0">
     <div class="container">
       <div class="row">
         <div class="col-xl-8 bg-white pb-60p">
@@ -33,7 +33,7 @@
           </nav>
           <h1>Оплата и доставка</h1>
           <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-          <section class="mt-40p">
+          <section class="mt-5">
             <h2>Способы доставки</h2>
             <div class="row align-items-center mb-20p">
               <div class="col-md-6 mb-3 mb-md-0">
@@ -73,17 +73,17 @@
               <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
             </div>
           </section>
-          <section class="mt-40p">
+          <section class="mt-5">
             <h2>Способы оплаты</h2>
             <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
             <div class="h6">Безналичными</div>
             <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
             <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
           </section>
-          <section class="mt-40p">
+          <section class="mt-5">
             <h3 class="h2">Транспортная упаковка зеркал</h3>
             <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <div class="font-weight-bold d-flex align-items-center">
+            <div class="fs-14 font-weight-bold d-flex align-items-center">
               <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
               <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
             </div>
