--- a/source/about-us.html
+++ b/source/about-us.html
@@ -21,8 +21,8 @@
     <include src="source/include/header.html"></include>
   </header>
 
-  <main class="main-about">
-    <section class="about-intro">
+  <main>
+    <section class="about-intro pt-20p pt-xl-0">
       <div class="container">
         <nav aria-label="breadcrumb" class="d-none d-xl-block">
           <ol class="breadcrumb">
