--- a/about-us.html
+++ b/about-us.html
@@ -151,8 +151,8 @@
 
   </header>
 
-  <main class="main-about">
-    <section class="about-intro">
+  <main>
+    <section class="about-intro pt-20p pt-xl-0">
       <div class="container">
         <nav aria-label="breadcrumb" class="d-none d-xl-block">
           <ol class="breadcrumb">
