--- a/garranty-and-return.html
+++ b/garranty-and-return.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Оплата и доставка – производство зеркал и стеклянных изделий Liberta</title>
-  <meta name="description" content="Оплата и доставка украинского производителя, фабрика стекла Liberta.">
+  <title>Гарантия и возврат – производство зеркал и стеклянных изделий Liberta</title>
+  <meta name="description" content="Гарантия и возврат украинского производителя, фабрика стекла Liberta.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -151,81 +151,98 @@
 
   </header>
 
-  <main class="delivery pt-20p pt-xl-0">
+  <main class="pt-20p pt-xl-0 pb-60p">
     <div class="container">
-      <div class="row">
-        <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb" class="d-none d-xl-block">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Главная</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
-            </ol>
-          </nav>
-          <h1>Оплата и доставка</h1>
-          <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-          <section class="mt-5">
-            <h2>Способы доставки</h2>
-            <div class="row align-items-center mb-20p">
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Aдресная доставка до вашего подъезда</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-2.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
-                  </div>
-                </div>
-              </div>
+      <nav aria-label="breadcrumb" class="d-none d-xl-block">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/">Главная</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Гарантия и возврат – производство зеркал и стеклянных изделий Liberta</li>
+        </ol>
+      </nav>
+      <h1>Условия гарантии и возврата</h1>
+    </div>
+    <section>
+      <div class="container">
+        <h2>Гарантийное обслуживание</h2>
+        <p>Гарантия действительна при наличии заполненного гарантийного талона, заверенного штампом продавца и подписанного покупателем. Период гарантийного срока обслуживания указывается в талоне (в зависимости от изделия) и начинается с даты покупки.</p>
+        <p class="fs-14 font-weight-bold d-flex align-items-center">
+          <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
+          <span>Гарантийный талон и товарный чек бережно храните в течение всего срока действия гарантии. При оформлении рекламации от Вас обязательно потребуют оригиналы вышеперечисленных документов!</span>
+        </p>
+      </div>
+      <div class="bg-light py-30p mt-30p">
+        <div class="container">
+          <h3 class="h5 text-secondary">Гарантия не распространяется:</h3>
+          <div class="row fs-14 mb-n3">
+            <div class="col-xl col-md-4">
+              <p>На механические повреждения, полученные в результате некорректного транспортировки, установки и эксплуатации изделия.</p>
             </div>
-            <p class="bg-pink p-20p">
-              <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
-            </p>
-            <div class="d-xl-none">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="h5 mt-30p">Бесплатная доставка</div>
-                  <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-                </div>
-                <div class="col-md-6">
-                  <img class="img-fluid" src="//liberta.ua/img/delivery-free-delivery.png.pagespeed.ce.7pIj7G4CMu.png" alt="">
-                </div>
-              </div>
-              <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+            <div class="col-xl col-md-4">
+              <p>При нарушении правил и условий эксплуатации, указанных в инструкции по эксплуатации.</p>
             </div>
-          </section>
-          <section class="mt-5">
-            <h2>Способы оплаты</h2>
-            <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
-            <div class="h6">Безналичными</div>
-            <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
-            <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
-          </section>
-          <section class="mt-5">
-            <h3 class="h2">Транспортная упаковка зеркал</h3>
-            <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <div class="fs-14 font-weight-bold d-flex align-items-center">
-              <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
+            <div class="col-xl col-md-4">
+              <p>На повреждения, вызванные попаданием на поверхность изделия едких веществ и жидкостей.</p>
             </div>
-          </section>
-        </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p d-none d-xl-block">
-          <div class="h5">Бесплатная доставка</div>
-          <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-          <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
-          <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+            <div class="col-xl col-md-4">
+              <p>На повреждения, вызванные стихией, пожаром, бытовыми факторами, перепадом напряжения.</p>
+            </div>
+            <div class="col-xl col-md-4">
+              <p>Если были внесены не предусмотренные производителем изменения в изделие (не описаны в правилах эксплуатации и установки).</p>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
+    <div class="container">
+      <section class="mt-5">
+        <h2>Эксплуатация и уход</h2>
+        <p>Зеркала ТМ Liberta предназначены для использования и хранения в бытовых условиях.</p>
+        <div class="row font-weight-bold">
+          <p class="col-12 col-md-6 d-flex align-items-center">
+            <img class="mr-3" src="//liberta.ua/img/garranty-storage-1.png.pagespeed.ce.mu5_Wko1p3.png" alt="">
+            <span>Температура от + 2°С до + 40°С </span>
+          </p>
+          <p class="col-12 col-md-6 d-flex align-items-center">
+            <img class="mr-3" src="//liberta.ua/img/garranty-storage-2.png.pagespeed.ce.XR7H-uunSS.png" alt="">
+            <span>Относительной влажности воздуха не более 80%</span>
+          </p>
+        </div>
+        <p>В случае, если душевая кабина доставлена ​​из холодного среды в теплое помещение, монтаж проводить через некоторое время, чтобы изделие принял температуру помещения.</p>
+        <p>Душевая кабина предназначена для бытового использования внутри помещения.</p>
+        <div class="row fs-14">
+          <p class="col-12 col-md-6 col-xl-3 d-flex align-items-start d-xl-block">
+            <img class="d-block mr-3 mr-xl-0" src="//liberta.ua/img/xgarranty-use-1.png.pagespeed.ic.De8F33KGbV.png" alt="">
+            <span>Запрещается использовать чистящие средства и материалы, которые имеют абразивные и агрессивные свойства, а также с покрытием из металлического волоконно или стружечного материала.</span>
+          </p>
+          <p class="col-12 col-md-6 col-xl-3 d-flex align-items-start d-xl-block">
+            <img class="d-block mr-3 mr-xl-0" src="//liberta.ua/img/xgarranty-use-2.png.pagespeed.ic.Aotw7BYM79.png" alt="">
+            <span>Запрещено на металлические детали оказывать воздействие, действие открытого огня, абразивных чистящих веществ и едких химикатов.</span>
+          </p>
+          <p class="col-12 col-md-6 col-xl-3 d-flex align-items-start d-xl-block">
+            <img class="d-block mr-3 mr-xl-0" src="//liberta.ua/img/xgarranty-use-3.png.pagespeed.ic.qi1SApHhVk.png" alt="">
+            <span>Не наносить удары по поверхности зеркала различными тяжелыми, острыми и режущими предметами.</span>
+          </p>
+          <p class="col-12 col-md-6 col-xl-3 d-flex align-items-start d-xl-block">
+            <img class="d-block mr-3 mr-xl-0" src="//liberta.ua/img/xgarranty-use-4.png.pagespeed.ic.R3XlTAljCt.png" alt="">
+            <span>Запрещается использовать изделие не по предназначению.</span>
+          </p>
+        </div>
+        <p class="fs-14 font-weight-bold d-flex align-items-center">
+          <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
+          <span>Перед началом монтажа необходимо внимательно ознакомится с инструкцией и проверить целостность изделия и комплектацию.</span>
+        </p>
+      </section>
+      <section class="mt-5">
+        <h2>Сервисное обслуживание</h2>
+        <p>Бесплатный ремонт изделия только в случае обнаружения дефектов производственного характера. Оформить заявку в сервисный центр вы можете в любое удобное время.</p>
+        <p class="bg-pink p-20p">
+          <span class="text-secondary font-weight-bold">Внимание!</span> Комплектацию и отсутствие на товаре механических повреждений проверяйте при получении в присутствии курьера. Не принимайте товар при обнаружении повреждений.
+        </p>
+      </section>
+      <section class="mt-5">
+        <h2>Возврат и обмен</h2>
+        <p>Согласно Закону Украины «О защите прав потребителей» стекло (зеркало), нарезанные или раскроенные под размер, определенный покупателем (заказчиком) надлежащего качества не подлежат обмену (возврату).</p>
+      </section>
     </div>
   </main>
 
