--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,7 @@
       <a href="payment-and-delivery.html" class="list-group-item list-group-item-action">Оплата и доставка</a>
       <a href="about-us.html" class="list-group-item list-group-item-action">О компании</a>
       <a href="garranty-and-return.html" class="list-group-item list-group-item-action">Гарантия и возврат</a>
+      <a href="contacts.html" class="list-group-item list-group-item-action">Контакты</a>
     </div>
   </div>
 
