--- a/source/contacts.html
+++ b/source/contacts.html
@@ -70,7 +70,8 @@
               </section>
             </div>
           </div>
-          <div class="mt-4">
+          <div class="contacts__form mt-4">
+            <button type="button" class="btn-toggle btn-unstyled d-md-none mb-2">Написать письмо</button>
             <div class="h3">Форма обратной связи</div>
             <form>
               <div class="form-group row">
@@ -139,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div id="map-contact" class="position-relative overflow-hidden mt-50p" style="height: 400px;"></div>
+    <div id="map-contact" class="position-relative overflow-hidden mt-30p mt-md-50p" style="height: 400px;"></div>
     <div class="container shops pt-40p">
       <h2 class="h3 mb-4">Магазины Liberta в городах Украины</h2>
       <ul class="list-unstyled mb-0 shops__list">
@@ -191,6 +192,7 @@
         <li><a href="">Чертков</a></li>
         <li><a href="">Энергодар</a></li>
       </ul>
+      <button type="button" class="btn-toggle btn-unstyled d-md-none mt-2">Все города</button>
     </div>
   </main>
 
