--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,7 @@
       <a href="about-us.html" class="list-group-item list-group-item-action">О компании</a>
       <a href="garranty-and-return.html" class="list-group-item list-group-item-action">Гарантия и возврат</a>
       <a href="contacts.html" class="list-group-item list-group-item-action">Контакты</a>
+      <a href="service-center.html" class="list-group-item list-group-item-action">Сервисный центр</a>
     </div>
   </div>
 
